@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.37.0
 
+              Build: Configure does test links to detect broken
+              libpng-config --ldflags.
+
               Build: fix build with separate build directory.
 
               Build: fix merge build with no X11 library.
